<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:layout_marginStart="27dp"
    android:layout_marginEnd="27dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/study_diet_main_category_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="26dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_img_main_category_1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_diet_main_category_name"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/refresh_diet_main_category_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_img_main_category_5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_diet_main_category_name"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/healthy_diet_main_category_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="26dp"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:src="@drawable/ic_img_main_category_2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthy_diet_main_category_name"
            android:textSize="12sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_meal_main_category_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="26dp"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:src="@drawable/ic_img_main_category_3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_meal_main_category_name"
            android:textSize="12sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/event_diet_main_category_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:src="@drawable/ic_img_main_category_4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_diet_main_category_name"
            android:textSize="12sp"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>